# mathematical-expression-cpp

./: CMakeLists.txt  README-Chinese.md  README.md
include/: BooleanCalculation.h  BooleanCalculationTwo.h  BracketsCalculation.h  BracketsCalculationTwo.h  Calculation.h  CalculationConstant.h  CalculationManagement.h  CalculationResults.h  ConstantRegion.h  CumulativeCalculation.h  FunctionFormulaCalculation.h  FunctionManager.h  MEStack.h  MExceptional.h  Mathematical_Expression.h  NumberCalculation.h  PrefixExpressionOperation.h  Utils.h  mathematical_expression.h
src/core/: Mathematical_Expression.cpp  mathematical_expression.cpp
src/core/calculation/: BooleanCalculation.cpp  BooleanCalculationTwo.cpp  BracketsCalculation.cpp  BracketsCalculationTwo.cpp  Calculation.cpp  CalculationConstant.cpp  CumulativeCalculation.cpp  FunctionFormulaCalculation.cpp  FunctionManager.cpp  NumberCalculation.cpp  PrefixExpressionOperation.cpp
src/core/container/: CalculationResults.cpp
src/core/manager/: CalculationManagement.cpp
src/dataContainer/: MEStack.cpp
src/exceptional/: MExceptional.cpp
src/utils/: NumberUtils.cpp  StrUtils.cpp
update/: 1.0.0_1.0.1.md
